--- a/contents/bottom.html
+++ b/contents/bottom.html
@@ -1,10 +1,15 @@
-A project lead by
-Yves Burnod
-and
-Salma Mesmoudi
-<br/>
-<br/>
-Sponsored by Sympactis
-<br/>
-<br/>
-Web development by <a href="http://rodic.fr" target="blank">Mathieu Rodic</a>
+<a href="http://matricememory.fr/matrice/fr/" class="logo" target="_blank">
+    <img src="http://www.iscpif.fr/tiki-download_file.php?fileId=623&display" />
+</a>
+
+<a href="http://www.iscpif.fr/" class="logo" target="_blank">
+    <img src="http://www.iscpif.fr/tiki-download_file.php?fileId=1078&display&x=199&y=150" />
+</a>
+
+<a href="http://www.agence-nationale-recherche.fr/" class="logo" target="_blank">
+    <img src="http://www-igm.univ-mlv.fr/~jyt/CARMA/label-ANR-bleu-CMJN.png" />
+</a>
+
+<a href="http://www.univ-paris1.fr/" class="logo" target="_blank">
+    <img src="http://www.univ-paris1.fr/fileadmin/templates/v2/images/logo-pas-rose.png" />
+</a>
