[FEATURE] Users now have a contact form on page /people/

--- a/contents/people.html
+++ b/contents/people.html
@@ -53,3 +53,12 @@
 </div>
 
 <div class="clear"></div>
+
+<h2>Contact us</h2>
+<form method="post" action="" name="people">
+    <input name="email" type="text" placeholder="Your email address" />
+    <br/>
+    <textarea name="message" placeholder="Your message"></textarea>
+    <br/>
+    <input type="submit" class="submit" value="Send!" />
+</form>
