[ANO] Added field validation for the contact form.

--- a/contents/people.html
+++ b/contents/people.html
@@ -56,7 +56,7 @@
 
 <h2>Contact us</h2>
 <form method="post" action="" name="people">
-    <input name="email" type="text" placeholder="Your email address" />
+    <input class="email" name="email" type="text" placeholder="Your email address" />
     <br/>
     <textarea name="message" placeholder="Your message"></textarea>
     <br/>
