[CONTENTS] Created a nice presentation page.

--- a/contents/presentation.html
+++ b/contents/presentation.html
@@ -1,3 +1,49 @@
+<h2>Quick tour</h2>
+
+<div class="inset-square">
+    <h3>Easy to use</h3>
+    <div class="picture">
+        <img src="/screenshots/full.png" style="width:auto;height:100%" />
+    </div>
+    <p>Manage your dataset in a <strong>simple</strong> way</p>
+    <p>Access all the info you need on <strong>one screen</strong></p>
+    <p>It's an online tool: <strong>no installation</strong> required, available everywhere</p>
+</div>
+
+<div class="inset-square">
+    <h3>Choose your representation</h3>
+    <div class="picture">
+        <img src="/screenshots/projection3D.png" style="top:-2.2em;left:-1em;width:111%" />
+    </div>
+    <p>View your data in <strong>2D</strong> or <strong>3D</strong></p>
+    <p><strong>White matter</strong> or <strong>gray matter</strong></p>
+    <p>Visualize the activation points as <strong>points clouds</strong> or <strong>projections</strong> on the cortex surface</p>
+    <p>The representations of the brain are based on the <strong>MNI-152</strong> model</p>
+</div>
+
+<div class="inset-square">
+    <h3>Import &amp; Export</h3>
+    <div class="picture">
+        <img src="/screenshots/import.png" />
+    </div>
+    <p><strong>Import</strong> your data, whether it is a <strong>NIfTI file</strong> or a list of <strong>activation peaks</strong></p>
+    <p><strong>Save</strong> it on the plateform</p>
+    <p><strong>Export</strong> the results of your query (brain standard views, activation peaks, correlation results, proximity graph with known cognitive tasks...) into a nice <strong>PDF</strong> file</p>
+</div>
+
+<div class="inset-square">
+    <h3>Compare...</h3>
+    <div class="picture">
+        <img src="/screenshots/graph.jpg" style="top:-2em" />
+    </div>
+    <p>...your <strong>datasets</strong> with each other</p>
+    <p>...your data with the activation peaks of 300 known <strong>cognitive tasks</strong></p>
+    <p>...<strong>gene expressions</strong> with activations</p>
+</div>
+
+<div class="clear"></div>
+
+<!--
 <dl>
 
 	<dt class="what"><a href="#what" name="what">What is this?</a></dt>
@@ -53,11 +99,6 @@
 		<br/>
 		<br/>
 		This software is completely <b>free</b> for public research purpose.
-		<!--
-		<br/>
-		<br/>
-		Read our <a href="/license">license terms</a> for more informations.
-		-->
 	</dd>
 	
 	
@@ -120,3 +161,4 @@
 	</dd>
 	
 </dl>
+-->
