[FEATURE] Updated credits in the page footers.

--- a/contents/bottom.html
+++ b/contents/bottom.html
@@ -1,15 +1,26 @@
-<a href="http://matricememory.fr/matrice/fr/" class="logo" target="_blank">
-    <img src="http://www.iscpif.fr/tiki-download_file.php?fileId=623&display" />
-</a>
-
-<a href="http://www.iscpif.fr/" class="logo" target="_blank">
-    <img src="http://www.iscpif.fr/tiki-download_file.php?fileId=1078&display&x=199&y=150" />
-</a>
-
-<a href="http://www.agence-nationale-recherche.fr/" class="logo" target="_blank">
-    <img src="http://www-igm.univ-mlv.fr/~jyt/CARMA/label-ANR-bleu-CMJN.png" />
-</a>
-
-<a href="http://www.univ-paris1.fr/" class="logo" target="_blank">
-    <img src="http://www.univ-paris1.fr/fileadmin/templates/v2/images/logo-pas-rose.png" />
-</a>
+<div>
+    <p>
+        A project lead by
+        Yves Burnod
+        and
+        <a href="http://salmamesmoudi.wix.com/salmamesmoudi">Salma Mesmoudi</a>.
+        Web development by
+        <a href="http://rodic.fr">Mathieu Rodic</a>.
+        <br/>
+    </p>
+    <p>
+        With the participation of:
+    </p>
+    <a href="http://matricememory.fr/matrice/fr/" class="logo" target="_blank">
+        <img alt="Equipex Matrice" src="http://www.iscpif.fr/tiki-download_file.php?fileId=623&display" />
+    </a>
+    <a href="http://www.iscpif.fr/" class="logo" target="_blank">
+        <img alt="ISC-PIF (Institut des Systèmes Complexes, Paris-Île-de-France)" src="http://www.iscpif.fr/tiki-download_file.php?fileId=1078&display&x=199&y=150" />
+    </a>
+    <a href="http://www.agence-nationale-recherche.fr/" class="logo" target="_blank">
+        <img alt="ANR (Agence Nationale de la Recherche)" src="http://www-igm.univ-mlv.fr/~jyt/CARMA/label-ANR-bleu-CMJN.png" />
+    </a>
+    <a href="http://www.univ-paris1.fr/" class="logo" target="_blank">
+        <img alt="Université Paris 1" src="http://www.univ-paris1.fr/fileadmin/templates/v2/images/logo-pas-rose.png" />
+    </a>
+</div>
