--- a/contents/people.html
+++ b/contents/people.html
@@ -3,7 +3,7 @@
 <div class="inset-square">
     <h3>Salma Mesmoudi</h3>
     <div class="picture">
-        <img src="/people/SalmaMesmoudi.jpg" style="top:-4.75em;width:110%" />
+        <img alt="Salma Mesmoudi" src="/people/SalmaMesmoudi.jpg" style="top:-4.75em;width:110%" />
     </div>
     <p>
         Ingénieur de Recherches au Laboratoire d'Imagerie Fonctionnelle
@@ -23,7 +23,7 @@
 <div class="inset-square">
     <h3>Yves Burnod</h3>
     <div class="picture">
-        <img src="/people/YvesBurnod.jpg" style="left:-1em;width:105%" />
+        <img alt="Yves Burnod" src="/people/YvesBurnod.jpg" style="left:-1em;width:105%" />
     </div>
     <p>
         Directeur de recherches au Laboratoire d'Imagerie Fonctionnelle
@@ -42,13 +42,17 @@
 
 <div class="inset-square">
     <h3>Claudia Cioli</h3>
-    <img />
+    <div class="picture">
+        <img alt="Claudia Cioli" />
+    </div>
     <p></p>
 </div>
 
 <div class="inset-square">
     <h3>Mathieu Rodic</h3>
-    <img />
+    <div class="picture">
+        <img alt="Mathieu Rodic" />
+    </div>
     <p></p>
 </div>
 
